# BotCraft-Worker

./: CMakeLists.txt  Dockerfile
src/: ChatClient.cpp  SocketPacket.cpp
src/botcraft-worker/: AtomicQueue.hpp  SocketPacket.hpp
